--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "dependencies": {
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.6",
+    "bootstrap": "^5.2.3",
     "concat": "^1.0.3",
     "node-sass": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
