--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
     "concat": "^1.0.3",
-    "node-sass": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
@@ -17,7 +16,9 @@
     "react-router-dom": "^6.8.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.7.0"
+    "react-select": "^5.7.0",
+    "sass": "^1.58.3",
+    "webpack": "^5.75.0"
   },
   "scripts": {
     "start": "react-scripts start",
